[package]
name = "rsa"
version = "0.1.0"
authors = ["RossMac96 <ramcintyre96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint-dig = "0.6.1"
num-bigint = { version = "0.2.1", features = ["rand"] }
rand = "0.5.4"
num-traits = "0.2.14"
num-integer = "0.1.44"
